--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
         <div>
           <p>Jane Doe is just awesome. I am so happy to have met her!</p>
-        </div>  
+        </div>
       </div>
     </article>
     <article class="art_smoke1">
@@ -161,7 +161,7 @@
         </div>
         <div>
           <p>Jane Doe saved us from a web disaster.</p>
-        </div>  
+        </div>
       </div>
 
     </article>
@@ -174,12 +174,36 @@
         </div>
         <div>
           <p>No one is better than Jane Doe.</p>
-        </div>  
+        </div>
       </div>
 
     </article>
     <!-- TODO: Pricing -->
-
+    <h2>My Price</h2>
+    <section class="tarjeta">
+    <article class="art_tarjeta">
+      <p class="art_header">Basic</p>
+      <p class="art_p">Basic</p>
+      <p class="art_p">Web Design</p>
+      <p class="art_p">Photography</p>
+      <p class="art_p">5GB Storage</p>
+      <p class="art_p">Mail Support</p>
+      <p class="art_p">$ 10</p>
+      <p class="art_p">per month</p>
+      <button class="btn_p">Sign Up</button>
+    </article>
+    <article class="art_tarjeta">
+      <p class="art_header">Pro</p>
+      <p class="art_p">Basic</p>
+      <p class="art_p">Web Design</p>
+      <p class="art_p">Photography</p>
+      <p class="art_p">50GB Storage</p>
+      <p class="art_p">Endless Support</p>
+      <p class="art_p">$ 25</p>
+      <p class="art_p">per month</p>
+      <button class="btn_p">Sign Up</button>
+    </article>
+  </section>
     <!-- TODO: Contact Section -->
 
     <!-- Footer -->
