--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <!-- Sidebar with image -->
-  <nav class="untref-sidebar untref-hide-medium untref-hide-small" style="width: 40%">
+  <nav class="untref-sidebar untref-hide-medium untref-hide-small" style="width:40%">
     <div class="bgimg"></div>
   </nav>
 
@@ -36,7 +36,7 @@
   </nav>
 
   <!-- Page Content -->
-  <main class="untref-main untref-padding-large" style="margin-left: 40%">
+  <main class="untref-main untref-padding-large" style="margin-left: 40%" >
     <!-- Menu icon to open sidebar -->
     <span class="untref-button untref-top untref-white untref-xxlarge untref-text-grey untref-hover-text-black"
       style="width: auto; right: 0" onclick="openNav()"><i class="fa fa-bars"></i></span>
@@ -97,19 +97,19 @@
       <h3 class="untref-padding-16">My Skills</h3>
       <p class="untref-wide">Photography</p>
       <div class="untref-light-grey">
-        <div class="untref-container untref-center untref-padding-small untref-dark-grey" style="width: 95%">
+        <div class="untref-container untref-center untref-padding-small untref-dark-grey" style="width: 100%">
           95%
         </div>
       </div>
       <p class="untref-wide">Web Design</p>
       <div class="untref-light-grey">
-        <div class="untref-container untref-center untref-padding-small untref-dark-grey" style="width: 85%">
+        <div class="untref-container untref-center untref-padding-small untref-dark-grey" style="width: 100%">
           85%
         </div>
       </div>
       <p class="untref-wide">Photoshop</p>
       <div class="untref-light-grey">
-        <div class="untref-container untref-center untref-padding-small untref-dark-grey" style="width: 80%">
+        <div class="untref-container untref-center untref-padding-small untref-dark-grey" style="width:100%">
           80%
         </div>
       </div>
@@ -179,7 +179,7 @@
 
     </article>
     <!-- TODO: Pricing -->
-    <h2>My Price</h2>
+    <h2 class="price">My Price</h2>
     <section class="tarjeta">
     <article class="art_tarjeta">
       <p class="art_header">Basic</p>
