--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
       <img class="imgtesti" src="./img/avatar_smoke.png" alt="">
       <div class="div_padre">
         <div class="div_h2">
-          <h2>Chandler Bing.</h2>
-          <p>Web Designer.</p>|
+          <p class="p_test">Chandler Bing.</p>
+          <p class="p_test2">Web Designer.</p>|
         </div>
         <div>
-          <p>Jane Doe is just awesome. I am so happy to have met her!</p>
+          <p class="p_test2">Jane Doe is just awesome. I am so happy to have met her!</p>
         </div>
       </div>
     </article>
@@ -156,11 +156,11 @@
       <img class="imgtesti" src="./img/bandmember.png" alt="">
       <div class="div_padre">
         <div class="div_h2">
-          <h2>Chris Fox.</h2>
-          <p> CEO at Mighty Schools.</p>|
+          <p class="p_test">Chris Fox.</p>
+          <p class="p_test2"> CEO at Mighty Schools.</p>|
         </div>
         <div>
-          <p>Jane Doe saved us from a web disaster.</p>
+          <p class="p_test2">Jane Doe saved us from a web disaster.</p>
         </div>
       </div>
 
@@ -169,11 +169,11 @@
       <img class="imgtesti" src="./img/avatar_g2.png" alt="">
       <div class="div_padre">
         <div class="div_h2">
-          <h2>Rebecca Flex.</h2>
-          <p> CEO at Company.</p>|
+          <p class="p_test">Rebecca Flex.</p>
+          <p class="p_test2"> CEO at Company.</p>|
         </div>
         <div>
-          <p>No one is better than Jane Doe.</p>
+          <p class="p_test2">No one is better than Jane Doe.</p>
         </div>
       </div>
 
@@ -188,18 +188,18 @@
       <p class="art_p">Photography</p>
       <p class="art_p">5GB Storage</p>
       <p class="art_p">Mail Support</p>
-      <p class="art_p">$ 10</p>
+      <p class="art_pn">$ 10</p>
       <p class="art_p">per month</p>
       <button class="btn_p">Sign Up</button>
     </article>
     <article class="art_tarjeta">
-      <p class="art_header">Pro</p>
+      <p class="art_header2">Pro</p>
       <p class="art_p">Basic</p>
       <p class="art_p">Web Design</p>
       <p class="art_p">Photography</p>
       <p class="art_p">50GB Storage</p>
       <p class="art_p">Endless Support</p>
-      <p class="art_p">$ 25</p>
+      <p class="art_pn">$ 25</p>
       <p class="art_p">per month</p>
       <button class="btn_p">Sign Up</button>
     </article>
