--- a/index.html
+++ b/index.html
@@ -205,6 +205,25 @@
     </article>
   </section>
     <!-- TODO: Contact Section -->
+    <section class="contact">
+      <p class="contactame">Contact Me</p>
+      <div class="contacto">
+        <img src="./img/location.png" alt="">
+        <p class="p_3"> Chicago, US</p>
+      </div>
+      <div class="contacto">
+        <img src="./img/phone.png" alt="">
+        <p class="p_3"> Phone: +00 151515</p>
+      </div>
+      <div class="contacto">
+        <img src="./img/mail.png" alt="">
+        <p class="p_3"> Email: mail@mail.com</p>
+      </div>
+      <div class="map">
+        <img src="./img/map.png" alt="">
+      </div>
+    </section>
+    
 
     <!-- Footer -->
     <footer class="untref-container untref-padding-64 untref-light-grey untref-center untref-opacity untref-xlarge"
