--- a/index.html
+++ b/index.html
@@ -220,10 +220,25 @@
         <p class="p_3"> Email: mail@mail.com</p>
       </div>
       <div class="map">
-        <img src="./img/map.png" alt="">
+        <img src="./img/map.png" style="width: 100%">
       </div>
     </section>
-    
+    <div class="formulario">
+      <form action="https://formsubmit.co/mirileas@gmail.com" method="post" enctype="multipart/form-data">
+        <input type="text" name="nombre" id="nombre" title="Nombre y Apellido" placeholder="Name">
+        <input type="text" name="nombre" id="nombre" title="Nombre y Apellido" placeholder="Message">
+        <input type="text" name="nombre" id="nombre" title="Nombre y Apellido" placeholder="Subject">
+        <input type="email" name="email" id="email" title="Ingresa tu Correo"
+              placeholder="Email">
+          <div class="buton">
+              <div class="btn_send">
+                <img src="./img/icons.png" alt="">
+                  <button class="enviar" type="submit">SEND MESSAGE</button>
+              </div>
+          </div>
+      </form>
+  </div>
+
 
     <!-- Footer -->
     <footer class="untref-container untref-padding-64 untref-light-grey untref-center untref-opacity untref-xlarge"
