--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
         <img src="./img/map.png" style="width: 100%">
       </div>
     </section>
+    <p class="p_form">Lets get in touch. Send me a message:</p>
     <div class="formulario">
       <form action="https://formsubmit.co/mirileas@gmail.com" method="post" enctype="multipart/form-data">
         <input type="text" name="nombre" id="nombre" title="Nombre y Apellido" placeholder="Name">
@@ -233,7 +234,7 @@
           <div class="buton">
               <div class="btn_send">
                 <img src="./img/icons.png" alt="">
-                  <button class="enviar" type="submit">SEND MESSAGE</button>
+                  <button class="enviar" type="submit" id="enviar">SEND MESSAGE</button>
               </div>
           </div>
       </form>
