--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
 
   <!-- Page Content -->
-  <main class="untref-main untref-padding-large" style="margin-left: 40%" >
+  <main class="untref-main untref-padding-large" style="margin-left: 40%">
     <!-- Menu icon to open sidebar -->
     <span class="untref-button untref-top untref-white untref-xxlarge untref-text-grey untref-hover-text-black"
       style="width: auto; right: 0" onclick="openNav()"><i class="fa fa-bars"></i></span>
@@ -144,8 +144,7 @@
       <img class="imgtesti" src="./img/avatar_smoke.png" alt="">
       <div class="div_padre">
         <div class="div_h2">
-          <p class="p_test">Chandler Bing.</p>
-          <p class="p_test2">Web Designer.</p>|
+          <p class="p_test">Chandler Bing. <span class="p_test2">&nbsp; Web Designer.</span></p>
         </div>
         <div>
           <p class="p_test2">Jane Doe is just awesome. I am so happy to have met her!</p>
@@ -156,8 +155,7 @@
       <img class="imgtesti" src="./img/bandmember.png" alt="">
       <div class="div_padre">
         <div class="div_h2">
-          <p class="p_test">Chris Fox. </p>
-          <p class="p_test2"> CEO at Mighty Schools.</p>|
+          <p class="p_test">Chris Fox. <span class="p_test2">&nbsp; CEO at Mighty Schools.</span></p>
         </div>
         <div>
           <p class="p_test2">Jane Doe saved us from a web disaster.</p>
@@ -169,8 +167,7 @@
       <img class="imgtesti" src="./img/avatar_g2.png" alt="">
       <div class="div_padre">
         <div class="div_h2">
-          <p class="p_test">Rebecca Flex.</p>
-          <p class="p_test2"> CEO at Company.</p>|
+          <p class="p_test">Rebecca Flex. <span class="p_test2">&nbsp;CEO at Company.</span></p>
         </div>
         <div>
           <p class="p_test2">No one is better than Jane Doe.</p>
@@ -181,29 +178,29 @@
     <!-- TODO: Pricing -->
     <h2 class="price">My Price</h2>
     <section class="tarjeta">
-    <article class="art_tarjeta">
-      <p class="art_header">Basic</p>
-      <p class="art_p">Basic</p>
-      <p class="art_p">Web Design</p>
-      <p class="art_p">Photography</p>
-      <p class="art_p">5GB Storage</p>
-      <p class="art_p">Mail Support</p>
-      <p class="art_pn">$ 10</p>
-      <p class="art_p">per month</p>
-      <button class="btn_p">Sign Up</button>
-    </article>
-    <article class="art_tarjeta">
-      <p class="art_header2">Pro</p>
-      <p class="art_p">Basic</p>
-      <p class="art_p">Web Design</p>
-      <p class="art_p">Photography</p>
-      <p class="art_p">50GB Storage</p>
-      <p class="art_p">Endless Support</p>
-      <p class="art_pn">$ 25</p>
-      <p class="art_p">per month</p>
-      <button class="btn_p">Sign Up</button>
-    </article>
-  </section>
+      <article class="art_tarjeta">
+        <p class="art_header">Basic</p>
+        <p class="art_p">Basic</p>
+        <p class="art_p">Web Design</p>
+        <p class="art_p">Photography</p>
+        <p class="art_p">5GB Storage</p>
+        <p class="art_p">Mail Support</p>
+        <p class="art_pn">$ 10</p>
+        <p class="art_p">per month</p>
+        <button class="btn_p">Sign Up</button>
+      </article>
+      <article class="art_tarjeta">
+        <p class="art_header2">Pro</p>
+        <p class="art_p">Basic</p>
+        <p class="art_p">Web Design</p>
+        <p class="art_p">Photography</p>
+        <p class="art_p">50GB Storage</p>
+        <p class="art_p">Endless Support</p>
+        <p class="art_pn">$ 25</p>
+        <p class="art_p">per month</p>
+        <button class="btn_p">Sign Up</button>
+      </article>
+    </section>
     <!-- TODO: Contact Section -->
     <section class="contact">
       <p class="contactame">Contact Me</p>
@@ -226,19 +223,18 @@
     <p class="p_form">Lets get in touch. Send me a message:</p>
     <div class="formulario">
       <form action="https://formsubmit.co/mirileas@gmail.com" method="post" enctype="multipart/form-data">
-        <input type="text" name="nombre" id="nombre" title="Nombre y Apellido" placeholder="Name">
-        <input type="text" name="nombre" id="nombre" title="Nombre y Apellido" placeholder="Message">
-        <input type="text" name="nombre" id="nombre" title="Nombre y Apellido" placeholder="Subject">
-        <input type="email" name="email" id="email" title="Ingresa tu Correo"
-              placeholder="Email">
-          <div class="buton">
-              <div class="btn_send">
-                <img src="./img/icons.png" alt="">
-                  <button class="enviar" type="submit" id="enviar">SEND MESSAGE</button>
-              </div>
+        <input type="text" name="name" id="nombre" title="Nombre " placeholder="Name">
+        <input type="text" name="Message" id="nombre" title="message" placeholder="Message">
+        <input type="text" name="Subject" id="nombre" title="Subject" placeholder="Subject">
+        <input type="email" name="email" id="email" title="Ingresa tu Correo" placeholder="Email">
+        <div class="buton">
+          <div class="btn_send">
+            <img src="./img/icons.png" alt="">
+            <button class="enviar" type="submit" id="enviar">SEND MESSAGE</button>
           </div>
+        </div>
       </form>
-  </div>
+    </div>
 
 
     <!-- Footer -->
