funciones del nav faltantes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <i class="fa fa-remove"></i>
     </a>
     <div class="untref-bar-block untref-center">
-      <a href="#" class="untref-bar-item untref-button untref-text-grey untref-hover-black"
+      <a href="#home" class="untref-bar-item untref-button untref-text-grey untref-hover-black"
         onclick="closeNav()">Home</a>
       <a href="#portfolio" class="untref-bar-item untref-button untref-text-grey untref-hover-black"
         onclick="closeNav()">Portfolio</a>
@@ -202,7 +202,7 @@
       </article>
     </section>
     <!-- TODO: Contact Section -->
-    <section class="contact">
+    <section class="contact" id="contact">
       <p class="contactame">Contact Me</p>
       <div class="contacto">
         <img src="./img/location.png" alt="">
