padding a los formularios

--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
           Meetings
         </div>
       </div>
-
       <button class="untref-button untref-light-grey untref-padding-large untref-section">
         <i class="fa fa-download"></i> Download Resume
       </button>
@@ -173,7 +172,6 @@
           <p class="p_test2">No one is better than Jane Doe.</p>
         </div>
       </div>
-
     </article>
     <!-- TODO: Pricing -->
     <h2 class="price">My Price</h2>
@@ -223,10 +221,10 @@
     <p class="p_form">Lets get in touch. Send me a message:</p>
     <div class="formulario">
       <form action="https://formsubmit.co/mirileas@gmail.com" method="post" enctype="multipart/form-data">
-        <input type="text" name="name" id="nombre" title="Nombre " placeholder="Name">
-        <input type="text" name="Message" id="nombre" title="message" placeholder="Message">
+        <input type="text" name="name" id="nombre" title="Nombre " placeholder="Name" required>
+        <input type="text" name="Message" id="nombre" title="message" placeholder="Message" required>
         <input type="text" name="Subject" id="nombre" title="Subject" placeholder="Subject">
-        <input type="email" name="email" id="email" title="Ingresa tu Correo" placeholder="Email">
+        <input type="email" name="email" id="email" title="Ingresa tu Correo" placeholder="Email" required>
         <div class="buton">
           <div class="btn_send">
             <img src="./img/icons.png" alt="">
@@ -235,8 +233,6 @@
         </div>
       </form>
     </div>
-
-
     <!-- Footer -->
     <footer class="untref-container untref-padding-64 untref-light-grey untref-center untref-opacity untref-xlarge"
       style="margin: -24px">
